--- a/src/component/main/footer.scss
+++ b/src/component/main/footer.scss
@@ -5,11 +5,11 @@ $footer-text-color:#9b9b9b;
 
   // margin: 8px 0;
 
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+ //padding: 1rem;
   text-align: center;
 
   .footer-links{
@@ -18,11 +18,11 @@ $footer-text-color:#9b9b9b;
     background:linear-gradient(to right,#565a96,#040549);
     &:after{
       content: '';
-      position: absolute;
+      position: fixed;
       top:100;
       left:50%;
 
-      width: 90%;
+      width: 100%;
       height: 2px;
 
       // background-color: #e4e4e4;
