--- a/src/component/App/UserDashboard.scss
+++ b/src/component/App/UserDashboard.scss
@@ -2,9 +2,9 @@
     margin: 0px;
   }
   
-  .wrapper {
-    margin-left: 10px;
-  }
+  // .wrapper {
+  //   margin-left: 10px;
+  // }
   
   a {
     text-decoration: none;
