--- a/src/component/main/footer.scss
+++ b/src/component/main/footer.scss
@@ -15,7 +15,7 @@ $footer-text-color:#9b9b9b;
   .footer-links{
     padding: 23px;
     text-align: center;
-    background:linear-gradient(to right,#565a96,#040549);
+    background:linear-gradient(to right,#9fc7ec,#040549);
     &:after{
       content: '';
       position: fixed;
