--- a/src/detail/header/venue-detail-header.scss
+++ b/src/detail/header/venue-detail-header.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   width: 100%;
-  height:200px;
+  height:300px;
 
   object-fit: cover;
   &:after{
@@ -18,7 +18,7 @@
     width:100%;
     height: 100%;
 
-    background-color: #12195f;
+    // background-color: #12195f;
 
     opacity: 0.6;
   }
@@ -53,7 +53,7 @@
 }
 .detail-header-venue-name{
   position: absolute;
-  bottom: 12%;
+  bottom: 35%;
 
   padding-left: 185px;
 
@@ -87,7 +87,7 @@
     height:100%;
 
     opacity: 0.8;
-    background:linear-gradient(to right,#565a96,#040549);
+    background-color: #2196F3;
     z-index: -1;
   }
 }
@@ -121,11 +121,16 @@
 }
 .detail-header-venue-rating-text{
   position: absolute;
-  top: 50%;
-  left: 50%;
 
-  font-size: 26px;
-  font-family: Gotham-Book;
+  font-size: 12px;
+  font-weight: 500;
+  font-family: Gotham;
+
+
+// left: 240px;
+
+  // font-size: 26px;
+  // font-family: Gotham-Book;
   color: #fffb00;
   // transform: translate(-50%,-50%) rotate(45deg) ;
 }
