--- a/src/detail/list/venue-tip-list.scss
+++ b/src/detail/list/venue-tip-list.scss
@@ -4,9 +4,9 @@
 
   display: inline-block;
 
-  width: 290px;
+  width: 400px;
 
-  background-color: #d3f800;
+  background-color: #2196F3;
 
   box-shadow: 0 0 34px 0 rgba(115, 95, 255, 0.32);
   z-index: 99;
@@ -25,9 +25,10 @@
   margin: 0;
   padding: 39px;
 
-  color: #4a4a4a;
+  color: #fff;
 
-  font-size: 16px;
+  font-weight: 1100px;
+  font-size: 23px;
   font-weight: 500;
   font-family: Gotham;
   &:after{
@@ -114,7 +115,7 @@
 
   padding-left: 10px;
 
-  color: #000000;
+  color: #fff;
 
   font-family: Gotham;
   font-size: 14px;
@@ -122,7 +123,7 @@
 }
 
 .venue-tip-text{
-  height: 30px;
+  height: 50px;
 
   margin: 0;
   padding-left: 90px;
