--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,15 @@
 
-body{
+body,html{
   
-  padding:0;
+  // padding:0;
   margin:0;
-  // background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background: url("../img/airport.jpeg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100%;
 }
 @font-face {
   font-family: 'Gotham';
