--- a/src/search/form/SearchForm.scss
+++ b/src/search/form/SearchForm.scss
@@ -3,10 +3,11 @@
   margin:0 0 24px;
 }
 .search-form{
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
-
-  padding: 10px;
+  padding-left: 380px;
+  padding-top: 20px;
+  // padding: 10px;
 
   // position: fixed;
   // left: 0;
@@ -14,7 +15,7 @@
   // width: 100%;
   // text-align: center;
 
-  background:linear-gradient(to right,#565a96,#040549);
+  // background:linear-gradient(to right,#565a96,#040549);
   height: 85px;
   .search-form-query-bar{
     width: 200px;
