--- a/src/search/list/venue-card-list.scss
+++ b/src/search/list/venue-card-list.scss
@@ -19,9 +19,15 @@
   display:inline-block;
 
   width:290px;
-  height:290px;
+  height:90px;
 
-  color:#FFF;
+  color: #ffffff;
+  background-color: #1882d6;
+  /* border: 10px; */
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 10px;
+  border-color: white;
   &:before{
     content:"";
     position:absolute;
@@ -182,9 +188,9 @@
   display: flex;
   justify-content: flex-end;
 
-  margin-left:40%;
+  // margin-left:40%;
   margin-right: auto;
 
-  width: 50%;
+  // width: 50%;
   padding: 10px;
 }
